--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "^16.13.1",
     "react-dom": "0.0.0-33c3af284",
     "react-firebaseui": "4.0.0",
-    "react-redux": "^6.0.0",
+    "react-redux": "^7.1.0-rc.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "swr": "0.2.2"
